--- a/assets/css/logAdm.css
+++ b/assets/css/logAdm.css
@@ -21,5 +21,10 @@ input[type="submit"] {
   background-color: #000;
   color: #fff;
   border-radius: 5px;
-  border: none;
+  border: 1px solid #fff;
+  cursor: pointer;
+}
+input[type="submit"]:hover {
+  transition: 0.2s ease-in-out;
+  box-shadow: var(--boxe-shadow-bxeShdw2);
 }
