--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,7 @@ body {
   background-color: #000;
   text-align: center;
   border-radius: 5px;
+  padding: 0 0 10px 0;
 }
 .secondary__title {
   font-family: var(--font-family-ftFamilyOne);
