--- a/assets/css/mobilemenu.css
+++ b/assets/css/mobilemenu.css
@@ -14,6 +14,7 @@
   width: 12vw;
   border-radius: 10px;
   background-color: #fff;
+  filter: drop-shadow(var(--drop-shadow-drpShdw));
 }
 .listview {
   display: flex;
