--- a/assets/css/variables.css
+++ b/assets/css/variables.css
@@ -13,6 +13,7 @@
   --drop-shadow-drpShdw: 0px 0px 2px #000;
   /*SHADOW Boxe*/
   --boxe-shadow-bxeShdw: 0px 0px 5px #000;
+  --boxe-shadow-bxeShdw2: 0px 0px 5px #fff;
   /*BACKGROUND COLOR*/
   --background-color-bgColorEl: rgba(0, 0, 0, 0.834);
 }
